--- a/app/src/main/res/layout/initial_gui.xml
+++ b/app/src/main/res/layout/initial_gui.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="bottom"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:rotationX="2">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -29,7 +31,7 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/imageView5"
+                        android:id="@+id/cardBackLeft"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -37,7 +39,7 @@
                         app:srcCompat="@drawable/bcardback" />
 
                     <ImageView
-                        android:id="@+id/imageView6"
+                        android:id="@+id/cardBackRight"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
@@ -53,9 +55,10 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/textView5"
+                        android:id="@+id/secondPlayerText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:minHeight="50sp"
                         android:text="Player 2"
                         android:textAlignment="center"
                         android:textSize="20sp" />
@@ -67,31 +70,33 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="9"
-                android:orientation="vertical">
+                android:orientation="vertical"
+                tools:ignore="VisualLintBounds">
 
                 <ImageView
-                    android:id="@+id/imageView7"
+                    android:id="@+id/coinTop"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="10"
                     app:srcCompat="@drawable/bcoin" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/secondPlayerDabloonsText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="30dp"
-                    android:textAlignment="center"
                     android:layout_weight="1"
-                    android:paddingBottom="10dp"
-                    android:text="69 Dabloons" />
+                    android:paddingBottom="33sp"
+                    android:text="69 Dabloons"
+                    android:textAlignment="center"
+                    android:textSize="30dp" />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                tools:ignore="VisualLintBounds">
 
 
             </LinearLayout>
@@ -102,25 +107,28 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="1"
+        android:clipToPadding="false"
         android:orientation="vertical">
 
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="top|center"
-            android:textSize="25sp"
-            android:layout_weight="1"
-            android:text="Deck" />
-
         <ImageView
-            android:id="@+id/imageView2"
-            android:layout_width="wrap_content"
+            android:id="@+id/cardBackCenter"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:layout_weight="1"
             app:srcCompat="@drawable/bcardback" />
+
+        <TextView
+            android:id="@+id/deckText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center"
+            android:layout_weight="1"
+            android:minHeight="55sp"
+            android:text="Deck"
+            android:textSize="24sp" />
+
+
     </LinearLayout>
 
     <LinearLayout
@@ -131,18 +139,18 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="3"
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView"
+                android:id="@+id/actionsText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="Income \nForeign Aid\nCoup\nTax\nAssasinate\nSteal\nExchange"
-
-                android:textSize="30sp" />
+                android:layout_weight="3"
+                android:paddingLeft="20sp"
+                android:text="Income\nForeign Aid\nCoup\nTax\nAssasinate\nSteal\nExchange"
+                android:textSize="24sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -158,21 +166,22 @@
                 android:orientation="vertical">
 
                 <ImageView
-                    android:id="@+id/imageView4"
+                    android:id="@+id/coinBottom"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="10"
                     app:srcCompat="@drawable/bcoin" />
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/playerDabloonsText"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="30dp"
-                    android:textAlignment="center"
                     android:layout_weight="1"
-                    android:paddingBottom="10dp"
-                    android:text="69 Dabloons" />
+                    android:minHeight="100sp"
+                    android:paddingBottom="22dp"
+                    android:text="69 Dabloons"
+                    android:textAlignment="center"
+                    android:textSize="30dp" />
 
             </LinearLayout>
 
@@ -180,24 +189,26 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:paddingStart="400dp"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                android:paddingStart="400dp">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/playerCharacterCardLeft"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:padding="5dp"
-                    app:srcCompat="@drawable/bambassador" />
+                    app:srcCompat="@drawable/bambassador"
+                    tools:ignore="VisualLintBounds" />
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/playerCharacterCardRight"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="4"
                     android:padding="5dp"
-                    app:srcCompat="@drawable/bambassador" />
+                    app:srcCompat="@drawable/bambassador"
+                    tools:ignore="VisualLintBounds" />
             </LinearLayout>
 
         </LinearLayout>
